# py_analysis_gui

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  remote_windows_dialog_client.py  requirements.txt  win_dialog_server.py  wx_app.py
